# django-docs-crawler

./: .gitignore  README.md  setup.cfg
docs_crawler/: admin.py  apps.py  urls.py
docs_crawler/api/: __init__.py  documentation.py
docs_crawler/migrations/: 0001_initial.py  0002_alter_preferences_documentation_base_url.py  0003_page_autogenerate_block_alter_page_title.py
docs_crawler/models/: block.py  page.py  preferences.py  singleton.py
docs_crawler/serializer/: page.py
docs_crawler/tests/: __init__.py  api.py
docs_crawler/tests/model/: __init__.py  block.py  page.py
