# setup.cfg
[metadata]
name = django-docs-crawler
version = 1.1.0
description = Django app for documentation crawler
long_description = file:README.md
url = https://github.com/kartoza/django-docs-crawler
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.6
setup_requires =
    setuptools >= 45.2.0
install_requires =
    Django>=3.2.16
    djangorestframework==3.14.0